--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,16 @@ services:
       - db
 
   db:
-    image: postgres
+    image: postgis/postgis:13-3.1
     env_file:
       - .env
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_datavol:/var/lib/postgresql/data
 
   redis:
       image: redis:latest
       ports:
         - "6379:6379"
 volumes:
-  postgres_data:
+  postgres_datavol:
   pgadmin_data:
