--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,9 +9,9 @@ services:
       - .:/code
     env_file:
       - .env
-    command: [ "./scripts/wait-for-it.sh", "db:5432", "--", "gunicorn", "--bind", ":8000", "--workers", "4", "config.wsgi:application" ]
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - nginx_network
 
@@ -23,6 +23,12 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - nginx_network
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $POSTGRES_USER" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 
   redis:
     image: redis:latest
