--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,26 +5,60 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
     volumes:
       - .:/code
     env_file:
       - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    networks:
+      - nginx_network
 
   db:
     image: postgis/postgis:13-3.1
     env_file:
       - .env
     volumes:
-      - postgres_datavol:/var/lib/postgresql/data
+      - ps_data:/var/lib/postgresql/data
+    networks:
+      - nginx_network
+    healthcheck:
+      test: [ "CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
-      image: redis:latest
-      ports:
-        - "6379:6379"
+    image: redis:latest
+    networks:
+      - nginx_network
+
+  pgadmin:
+    image: dpage/pgadmin4
+    env_file:
+      - .env
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    networks:
+      - nginx_network
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8000:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./staticfiles:/code/staticfiles
+      - ./media:/code/media
+    depends_on:
+      - web
+    networks:
+      - nginx_network
+
 volumes:
-  postgres_datavol:
+  ps_data:
   pgadmin_data:
+
+networks:
+  nginx_network:
