--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -13,14 +13,14 @@ jobs:
       db:
         image: postgis/postgis:13-3.1
         env:
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          POSTGRES_USER: ${{ POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ POSTGRES_DB }}
         volumes:
           - ps_data:/var/lib/postgresql/data
         ports:
           - 5432:5432
-        options: --health-cmd "pg_isready -U " ${{ secrets.POSTGRES_USER }} "-d" ${{ secrets.POSTGRES_DB }} --health-interval 10s --health-timeout 5s --health-retries 5
+        options: --health-cmd "pg_isready -U " ${{ POSTGRES_USER }} "-d" ${{ POSTGRES_DB }} --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout Repository
