--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -18,7 +18,7 @@ jobs:
           POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         ports:
           - 5432:5432
-        options: --health-cmd "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" --health-interval 10s --health-timeout 5s --health-retries 5
+        options: --health-cmd "pg_isready -U ${{ secrets.POSTGRES_USER }} -d ${{ secrets.POSTGRES_DB }}" --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout Repository
