--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -8,38 +8,54 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: testing
-    env:
-      POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
-      POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
 
     services:
-      postgres:
-        image: postgis/postgis:13-3.1
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready  --health-interval 10s --health-timeout 5s --health-retries 5
+      docker:
+        image: docker:20.10.11
+        options:
+          - --group-add=$(stat -c %g /var/run/docker.sock)
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+      EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
+      POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
     steps:
+      - name: Set up Docker Compose environment variables
+        run: |
+          echo "DB_HOST=${DB_HOST}" >> .env
+          echo "DB_PORT=${DB_PORT}" >> .env
+          echo "EMAIL_HOST=${EMAIL_HOST}" >> .env
+          echo "EMAIL_HOST_USER=${EMAIL_HOST_USER}" >> .env
+          echo "EMAIL_PORT=${EMAIL_PORT}" >> .env
+          echo "POSTGRES_DB=${POSTGRES_DB}" >> .env
+          echo "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}" >> .env
+          echo "POSTGRES_USER=${POSTGRES_USER}" >> .env
+          echo "SECRET_KEY=${SECRET_KEY}" >> .env
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
+      - name: Build Docker Image
+        run: docker-compose build
 
-      - name: Install Dependencies
+      - name: Run Docker Containers
+        run: docker-compose up -d
+
+      - name: Wait for Services to Start
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run Migrations
-        run: python manage.py migrate
+          until nc -zv localhost 8000; do
+            echo "Waiting for service to start..."
+            sleep 5
+          done
 
       - name: Run Tests
-        run: python manage.py test
+        run: docker-compose exec web python manage.py test
 
+      - name: Clean Up Docker Containers
+        run: docker-compose down
