fix: change testing action to docker in docker

--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -37,7 +37,8 @@ jobs:
           echo "POSTGRES_USER=${POSTGRES_USER}" >> .env
           echo "SECRET_KEY=${SECRET_KEY}" >> .env
           echo "DEBUG=True" >> .env
-          cat .env
+          pwd
+          ls -la
 
       - name: Checkout Repository
         uses: actions/checkout@v2
