--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -44,6 +44,16 @@ jobs:
 
       - name: Run Docker Containers
         run: docker compose up
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+          EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+          EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
       - name: Wait for Services to Start
         run: |
