--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: testing
 
     services:
       docker:
@@ -41,19 +42,12 @@ jobs:
           echo "DEBUG=True" >> .env
           echo "DB_HOST=db" >> .env
           echo "DB_PORT=5432" >> .env
+          
+          cat .env
 
       - name: Run Docker Containers
         run: docker compose up
-        env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
-          EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
-          EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+
 
       - name: Wait for Services to Start
         run: |
