--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -44,7 +44,7 @@ jobs:
           cat .env
 
       - name: Run Docker Containers
-        run: docker compose up
+        run: docker compose up -d
 
 
       - name: Wait for Services to Start
