--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,14 @@ http {
     server {
         listen 80;
         server_name localhost; # Update this to your domain or IP
-
+        location /ws/ {
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header Host $http_host;
+                proxy_redirect off;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "Upgrade";
+                proxy_pass http://web:8000/ws/;
+        }
         location / {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -22,6 +29,7 @@ http {
             proxy_redirect off;
             proxy_buffering off;
         }
+
 
         location /static/ {
             alias /code/staticfiles/; # Update this to your static files directory
