--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+channels==4.0.0
+daphne==4.1.0
 Django~=4.2.2
 django-ckeditor==6.5.1
 django-cors-headers==3.13.0
@@ -14,3 +16,4 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.6
 django-redis==5.2.0
 django-environ==0.7.0
+
