fix: added env sample values to env.example

--- a/env.example
+++ b/env.example
@@ -1,10 +1,11 @@
 # Django Secret Key
 # Generate a secure random key and keep it secret
-SECRET_KEY=your_secret_key_here
+SECRET_KEY=any_random_key
 
 # Debug Mode
-# Set to True for development, False for production
 DEBUG=True
+
+ENVIRONMENT=development
 
 # Admin URL
 # URL path for the Django admin interface
@@ -20,39 +21,39 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
 # Email Host
 # Hostname of the email server
-EMAIL_HOST=your_email_host_here
+EMAIL_HOST=smtp.gmail.com
 
 # Email Host User
 # Username for authenticating with the email server
-EMAIL_HOST_USER=your_email_host_user_here
+EMAIL_HOST_USER=someone@gmail.com
 
 # Email Host Password
 # Password for authenticating with the email server
-EMAIL_HOST_PASSWORD=your_email_host_password_here
+EMAIL_HOST_PASSWORD=strong_password
 
-# Email Port
-# Port number for the email server
-EMAIL_PORT=587
+## Email Port
+## Port number for the email server
+#EMAIL_PORT=111
 
 # Database Name
 # Name of the database
-DB_NAME=your_database_name_here
+POSTGRES_DB=db_name
 
 # Database User
 # Username for authenticating with the database
-DB_USER=your_database_user_here
+POSTGRES_USER=db_user_name
 
 # Database Password
 # Password for authenticating with the database
-DB_PASSWORD=your_database_password_here
+POSTGRES_PASSWORD=a_strong_db_password
 
 # Database Host
 # Hostname of the database server
-DB_HOST=your_database_host_here
+DB_HOST=db
 
 # Database Port
 # Port number of the database server
-DB_PORT=your_database_port_here
+DB_PORT=5432
 
 # Media Base URL
 # Base URL for serving media files
@@ -60,5 +61,10 @@ MEDIA_BASE_URL=http://localhost:3000
 
 
 # PG admin
-PGADMIN_DEFAULT_EMAIL=your_pgadmin_default_email_here
-PGADMIN_DEFAULT_PASSWORD=your_pgadmin_default_password_here
+PGADMIN_DEFAULT_EMAIL=admin@gmail.com
+PGADMIN_DEFAULT_PASSWORD=strong_password
+
+# django
+DJANGO_SUPERUSER_NAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@gmail.com
+DJANGO_SUPERUSER_PASSWORD=strong_password
